package es.uniovi.dlp.ast.expressions;

public class Arithmetic {
}
